# react-social-media-app-backend

./: .env.prod  .gitignore  appspec.yml  aws-django-server.pem  pyproject.toml  requirements.txt  scratch.py  scratch2.py
core/: models.py  serializers.py  urls.py  utils.py
core/migrations/: 0001_initial.py  0002_alter_user_options_user_date_joined_user_first_name_and_more.py  0003_alter_user_date_of_birth.py  0004_alter_user_date_of_birth.py  0005_user_uuid.py  0006_alter_user_uuid.py  0007_alter_user_uuid.py  0008_remove_user_id_alter_user_uuid.py  0009_rename_uuid_user_id.py  0010_post_postimage_bookmark_postlike.py  0011_rename_parent_post_reply_parent_post_respost_parent.py  0012_rename_respost_parent_post_repost_parent.py  0013_user_bio_user_location_follow.py  0014_user_header_photo.py  0015_user_website.py  0016_alter_post_content_alter_user_location.py  0017_alter_postlike_options_postlike_created_at.py  0018_alter_bookmark_options_alter_follow_options_and_more.py  0019_notification_alter_follow_unique_together_and_more.py  0020_remove_notification_notification_type_check_and_more.py  0021_visitrecord.py  0022_alter_post_content_hashtag.py  0023_enable_pg_trgm.py  0024_enable_unaccent.py  0025_alter_hashtag_name.py  0026_alter_hashtag_name.py  0027_visitor_log.py  0028_rename_vistorid_visitor_visitorid.py  0029_rename_vistor_log_visitor.py  0030_log_meta.py  0031_alter_log_meta.py
gunicorn/: gunicorn.service
mysite/: settings.py  urls.py
nginx/: nginx.conf
scripts/: clean_instance.sh  gunicorn.sh  nginx.sh  python_dependencies.sh  start_app.sh
(+6 files in other folders)
